--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
                 <li>Automatisatie boekingsysteem & verlichting</li>
                 <li>Beheer camera -en netwerksysteem</li>
                 <li>IT-ondersteuning</li>
-                <li><strong>VROEGER</strong>: interimconcract als jobstudent <br> <strong>NU</strong>: klant van <a
+                <li><strong>VROEGER</strong>: interimcontract als jobstudent <br> <strong>NU</strong>: klant van <a
                     href="https://www.renzoitservices.be">Renzo IT
                     Services</a></li>
               </ul>
