--- a/index.html
+++ b/index.html
@@ -349,8 +349,8 @@
               <h5>2022 - 2023</h5>
               <p><em>P.C. Casa De Padel Diest</em></p>
               <ul>
-                <li>Automatisatie boekingsysteem & verlichting</li>
-                <li>Beheer camera -en netwerksysteem</li>
+                <li>Automatisering boekingsysteem & verlichting</li>
+                <li>Beheer van camerasysteem en netwerk</li>
                 <li>IT-ondersteuning</li>
                 <li><strong>VROEGER</strong>: interimcontract als jobstudent <br> <strong>NU</strong>: klant van <a
                     href="https://www.renzoitservices.be">Renzo IT
