--- a/index.html
+++ b/index.html
@@ -128,16 +128,16 @@
               waar ik het traject Cloud & Cybersecurity volg. Eerder behaalde ik mijn diploma TSO Informaticabeheer.
             </p>
             <p>
-              Ik ben woonachtig te Diest, waar ik ook mijn zaak run. Naast mijn opleiding wou ik mijn vrije tijd
-              opvullen
-              met mijn liefde voor IT. Ik merkte op dat de oudere generatie alsmaar meer moeite heeft om bij te blijven.
-              (Denk maar aan ItsMe bijvoorbeeld). Omwille daarvan heb ik <a href="https://www.renzoitservices.be">Renzo
-                IT Services</a>
-              opgericht. Als student-zelfstandige bied ik de mensen in de regio niet alleen ICT-hulp (met een hoop
-              geduld en een verstaanbare uitleg),
-              maar repareer ik ook computers en installeer/optimaliseer ik draadloze netwerkapparatuur. De talloze
-              5-sterrenreviews bevestigen dan ook de daadkracht
-              van mijn diensten.
+              Ik woon in Diest, waar ik ook mijn eigen zaak run. Naast mijn opleiding wilde ik mijn vrije tijd nuttig
+              besteden aan mijn passie voor IT. Al snel merkte ik dat vooral de oudere generatie moeite heeft om mee te
+              blijven met digitale evoluties — denk maar aan toepassingen zoals itsme. Daar wou ik verandering in
+              brengen.
+
+              Daarom heb ik
+              <a href="https://www.renzoitservices.be">Renzo IT Services</a>
+              opgericht. Als student-zelfstandige bied ik klanten begrijpelijke en geduldige ICT-hulp,
+              herstel en verkoop ik computers en plaats ik draadloze netwerksystemen op maat van de woning. De vele
+              5-sterrenreviews bevestigen de kwaliteit en impact van mijn dienstverlening.
             </p>
             <p>
               Je merk het: over mijn passie voor IT bestaat er geen twijfel. Ik hoop daarom in de toekomst
