--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-sea">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/SEA/sea-preview.JPG" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/SEA/sea-preview.JPG" class="img-fluid rounded" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/SEA/sea-preview.JPG" data-gallery="portfolioGallery"
                   class="portfolio-lightbox"
@@ -400,7 +400,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-ph">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/PH/ph-preview.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/PH/ph-preview.jpg" class="img-fluid rounded" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/PH/ph-preview.jpg" data-gallery="portfolioGallery"
                   class="portfolio-lightbox" title="Project Hosting: hostingplatform in eigen datacenter"><i
@@ -412,7 +412,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-ps2">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/PS2/ps2-preview.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/PS2/ps2-preview.jpg" class="img-fluid rounded" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/PS2/ps2-preview.jpg" data-gallery="portfolioGallery"
                   class="portfolio-lightbox" title="PS2: Trainingssessie over Canva bij Het Eepos"><i
