--- a/index.html
+++ b/index.html
@@ -331,19 +331,18 @@
               <h5>2022 - Heden</h5>
               <p><em>Renzo IT Services</em></p>
               <ul>
-                <li>Oplossing algemene ICT problemen</li>
-                <li>Reparatie/installatie computers en laptops</li>
-                <li>Advies/verkoop van nieuwe toestellen</li>
+                <li>ICT-ondersteuning</li>
+                <li>Reparatie/verkoop computers</li>
                 <li>Optimalisatie/installatie netwerken (Wi-Fi)</li>
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Operationeel Manager ICT</h4>
+              <h4>Jobstudent IT-beheerder</h4>
               <h5>2022 - 2023</h5>
               <p><em>P.C. Casa De Padel Diest</em></p>
               <ul>
                 <li>Automatisering boekingsysteem & verlichting</li>
-                <li>Beheer van camerasysteem en netwerk</li>
+                <li>Beheer camera -en netwerksysteem</li>
                 <li>IT-ondersteuning</li>
                 <li><strong>VROEGER</strong>: interimcontract als jobstudent <br> <strong>NU</strong>: klant van <a
                     href="https://www.renzoitservices.be">Renzo IT
