--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
               <ul>
                 <li>Automatisering boekingsysteem & verlichting</li>
                 <li>Beheer camera -en netwerksysteem</li>
-                <li>IT-ondersteuning</li>
+                <li>ICT-ondersteuning</li>
                 <li><strong>VROEGER</strong>: interimcontract als jobstudent <br> <strong>NU</strong>: klant van <a
                     href="https://www.renzoitservices.be">Renzo IT
                     Services</a></li>
