--- a/index.html
+++ b/index.html
@@ -343,9 +343,8 @@
                 <li>Automatisering boekingsysteem & verlichting</li>
                 <li>Beheer camera -en netwerksysteem</li>
                 <li>ICT-ondersteuning</li>
-                <li><strong>VROEGER</strong>: interimcontract als jobstudent <br> <strong>NU</strong>: klant van <a
-                    href="https://www.renzoitservices.be">Renzo IT
-                    Services</a></li>
+                <li><strong>VANDAAG</strong>: klant van <a href="https://www.renzoitservices.be">Renzo IT Services</a>
+                </li>
               </ul>
             </div>
           </div>
